--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@google-analytics/data": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.15",
+    "@supabase/supabase-js": "^2.87.1",
+    "browser-image-compression": "^2.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.6.0",
