--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemailer": "^7.0.11",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
+    "react-quill-new": "^3.6.0",
     "recharts": "^3.5.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss-animate": "^1.0.7"
